fixed spacing

--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -133,49 +133,43 @@
   justify-content: space-between;
   margin: auto;
   padding-top: 60px;
-  position:relative;
+  position: relative;
 }
 
 .gallery-img {
- display: flex, inline-block;
- padding: 5px 5px;
+  display: flex;
+  padding: 5px 5px;
  
   img {
-  width: 193px;
-  height: 193px;
-  border-radius: 4px;
-  object-fit: cover;
-  display: flex, inline-block;
+    width: 193px;
+    height: 193px;
+    border-radius: 4px;
+    object-fit: cover;
+    display: flex;
 
-  &:hover img {
-    opacity: 0.7;
+    &:hover img {
+      opacity: 0.7;
+    }
   }
- }
 }
 
 
-  .gallery-icon a {
-    
-    opacity: 0; 
-    font-size: 28px;
-    display: flex inline-block;
-    color: $color-danger;
-
-    z-index: 2;
+.gallery-icon a {
+  opacity: 0; 
+  font-size: 28px;
+  display: flex inline-block;
+  color: $color-danger;
+  z-index: 2;
   
-
-    &:hover {
-      opacity: 1;
+  &:hover {
+    opacity: 1;
     
   }
- }
-
-
+}
 
 .footer a {
   color: $color-main;
 }
-
 /* Media */
 @media screen and (max-width: 690px) {
 
@@ -185,27 +179,26 @@
   }
   .carousel {
     justify-content: center;
-
     .cell-text {
       display: block;
     }
   }
-  .gallery .img-box {
-    justify-content: center;
 
-    .gallery img {
-      height: 250px;
-      width: 250px;
-    }
+.gallery .img-box {
+  justify-content: center;
+
+  .gallery img {
+    height: 250px;
+    width: 250px;
   }
+}
 
-  .gallery-icon {
-      justify-content:center;
-    }
+.gallery-icon {
+  justify-content: center;
+}
   
-
-  .gallery  .footer {
-    text-align: center;
+.gallery  .footer {
+  text-align: center;
   }
 }
 
